force-app/main/default/objects/Influence__c/Influence__c.object-meta.xml
<CustomObject>
    <label>Influence</label>
    <pluralLabel>Influences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Influence Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>