force-app/main/default/objects/Influence__c/fields/AFG__c.field-meta.xml
<CustomField>
    <fullName>AFG__c</fullName>
    <label>AFG</label>
    <type>Text</type>
    <length>255</length>
</CustomField>