force-app/main/default/objects/Influence__c/fields/ALD__c.field-meta.xml
<CustomField>
    <fullName>ALD__c</fullName>
    <label>ALD</label>
    <type>Text</type>
    <length>255</length>
</CustomField>