force-app/main/default/objects/Influence__c/fields/ANH__c.field-meta.xml
<CustomField>
    <fullName>ANH__c</fullName>
    <label>ANH</label>
    <type>Text</type>
    <length>255</length>
</CustomField>