force-app/main/default/objects/Influence__c/fields/AST__c.field-meta.xml
<CustomField>
    <fullName>AST__c</fullName>
    <label>AST</label>
    <type>Text</type>
    <length>255</length>
</CustomField>