force-app/main/default/objects/Influence__c/fields/BAD__c.field-meta.xml
<CustomField>
    <fullName>BAD__c</fullName>
    <label>BAD</label>
    <type>Text</type>
    <length>255</length>
</CustomField>