force-app/main/default/objects/Influence__c/fields/BAL__c.field-meta.xml
<CustomField>
    <fullName>BAL__c</fullName>
    <label>BAL</label>
    <type>Text</type>
    <length>255</length>
</CustomField>