force-app/main/default/objects/Influence__c/fields/BEL__c.field-meta.xml
<CustomField>
    <fullName>BEL__c</fullName>
    <label>BEL</label>
    <type>Text</type>
    <length>255</length>
</CustomField>