force-app/main/default/objects/Influence__c/fields/BHU__c.field-meta.xml
<CustomField>
    <fullName>BHU__c</fullName>
    <label>BHU</label>
    <type>Text</type>
    <length>255</length>
</CustomField>