force-app/main/default/objects/Influence__c/fields/BRE__c.field-meta.xml
<CustomField>
    <fullName>BRE__c</fullName>
    <label>BRE</label>
    <type>Text</type>
    <length>255</length>
</CustomField>