force-app/main/default/objects/Influence__c/fields/BUK__c.field-meta.xml
<CustomField>
    <fullName>BUK__c</fullName>
    <label>BUK</label>
    <type>Text</type>
    <length>255</length>
</CustomField>