force-app/main/default/objects/Influence__c/fields/BUR__c.field-meta.xml
<CustomField>
    <fullName>BUR__c</fullName>
    <label>BUR</label>
    <type>Text</type>
    <length>255</length>
</CustomField>