force-app/main/default/objects/Influence__c/fields/CHI__c.field-meta.xml
<CustomField>
    <fullName>CHI__c</fullName>
    <label>CHI</label>
    <type>Text</type>
    <length>255</length>
</CustomField>