force-app/main/default/objects/Influence__c/fields/CLM__c.field-meta.xml
<CustomField>
    <fullName>CLM__c</fullName>
    <label>CLM</label>
    <type>Text</type>
    <length>255</length>
</CustomField>