force-app/main/default/objects/Influence__c/fields/CSA__c.field-meta.xml
<CustomField>
    <fullName>CSA__c</fullName>
    <label>CSA</label>
    <type>Text</type>
    <length>255</length>
</CustomField>