force-app/main/default/objects/Influence__c/fields/D02__c.field-meta.xml
<CustomField>
    <fullName>D02__c</fullName>
    <label>D02</label>
    <type>Text</type>
    <length>255</length>
</CustomField>