force-app/main/default/objects/Influence__c/fields/D03__c.field-meta.xml
<CustomField>
    <fullName>D03__c</fullName>
    <label>D03</label>
    <type>Text</type>
    <length>255</length>
</CustomField>