force-app/main/default/objects/Influence__c/fields/DAI__c.field-meta.xml
<CustomField>
    <fullName>DAI__c</fullName>
    <label>DAI</label>
    <type>Text</type>
    <length>255</length>
</CustomField>