force-app/main/default/objects/Influence__c/fields/HDJ__c.field-meta.xml
<CustomField>
    <fullName>HDJ__c</fullName>
    <label>HDJ</label>
    <type>Text</type>
    <length>255</length>
</CustomField>