force-app/main/default/objects/Influence__c/fields/HEK__c.field-meta.xml
<CustomField>
    <fullName>HEK__c</fullName>
    <label>HEK</label>
    <type>Text</type>
    <length>255</length>
</CustomField>