force-app/main/default/objects/Influence__c/fields/HND__c.field-meta.xml
<CustomField>
    <fullName>HND__c</fullName>
    <label>HND</label>
    <type>Text</type>
    <length>255</length>
</CustomField>