force-app/main/default/objects/Influence__c/fields/HOL__c.field-meta.xml
<CustomField>
    <fullName>HOL__c</fullName>
    <label>HOL</label>
    <type>Text</type>
    <length>255</length>
</CustomField>