force-app/main/default/objects/Influence__c/fields/ITA__c.field-meta.xml
<CustomField>
    <fullName>ITA__c</fullName>
    <label>ITA</label>
    <type>Text</type>
    <length>255</length>
</CustomField>