force-app/main/default/objects/Influence__c/fields/KAL__c.field-meta.xml
<CustomField>
    <fullName>KAL__c</fullName>
    <label>KAL</label>
    <type>Text</type>
    <length>255</length>
</CustomField>