force-app/main/default/objects/Influence__c/fields/KHI__c.field-meta.xml
<CustomField>
    <fullName>KHI__c</fullName>
    <label>KHI</label>
    <type>Text</type>
    <length>255</length>
</CustomField>