force-app/main/default/objects/Influence__c/fields/KOR__c.field-meta.xml
<CustomField>
    <fullName>KOR__c</fullName>
    <label>KOR</label>
    <type>Text</type>
    <length>255</length>
</CustomField>