force-app/main/default/objects/Influence__c/fields/KRA__c.field-meta.xml
<CustomField>
    <fullName>KRA__c</fullName>
    <label>KRA</label>
    <type>Text</type>
    <length>255</length>
</CustomField>