force-app/main/default/objects/Influence__c/fields/LIP__c.field-meta.xml
<CustomField>
    <fullName>LIP__c</fullName>
    <label>LIP</label>
    <type>Text</type>
    <length>255</length>
</CustomField>