force-app/main/default/objects/Influence__c/fields/LUA__c.field-meta.xml
<CustomField>
    <fullName>LUA__c</fullName>
    <label>LUA</label>
    <type>Text</type>
    <length>255</length>
</CustomField>