force-app/main/default/objects/Influence__c/fields/LUX__c.field-meta.xml
<CustomField>
    <fullName>LUX__c</fullName>
    <label>LUX</label>
    <type>Text</type>
    <length>255</length>
</CustomField>