force-app/main/default/objects/Influence__c/fields/MAK__c.field-meta.xml
<CustomField>
    <fullName>MAK__c</fullName>
    <label>MAK</label>
    <type>Text</type>
    <length>255</length>
</CustomField>