force-app/main/default/objects/Influence__c/fields/MCK__c.field-meta.xml
<CustomField>
    <fullName>MCK__c</fullName>
    <label>MCK</label>
    <type>Text</type>
    <length>255</length>
</CustomField>