force-app/main/default/objects/Influence__c/fields/MEX__c.field-meta.xml
<CustomField>
    <fullName>MEX__c</fullName>
    <label>MEX</label>
    <type>Text</type>
    <length>255</length>
</CustomField>