force-app/main/default/objects/Influence__c/fields/MGL__c.field-meta.xml
<CustomField>
    <fullName>MGL__c</fullName>
    <label>MGL</label>
    <type>Text</type>
    <length>255</length>
</CustomField>