force-app/main/default/objects/Influence__c/fields/MOL__c.field-meta.xml
<CustomField>
    <fullName>MOL__c</fullName>
    <label>MOL</label>
    <type>Text</type>
    <length>255</length>
</CustomField>