force-app/main/default/objects/Influence__c/fields/MON__c.field-meta.xml
<CustomField>
    <fullName>MON__c</fullName>
    <label>MON</label>
    <type>Text</type>
    <length>255</length>
</CustomField>