force-app/main/default/objects/Influence__c/fields/NET__c.field-meta.xml
<CustomField>
    <fullName>NET__c</fullName>
    <label>NET</label>
    <type>Text</type>
    <length>255</length>
</CustomField>