force-app/main/default/objects/Influence__c/fields/OMA__c.field-meta.xml
<CustomField>
    <fullName>OMA__c</fullName>
    <label>OMA</label>
    <type>Text</type>
    <length>255</length>
</CustomField>