force-app/main/default/objects/Influence__c/fields/PER__c.field-meta.xml
<CustomField>
    <fullName>PER__c</fullName>
    <label>PER</label>
    <type>Text</type>
    <length>255</length>
</CustomField>