force-app/main/default/objects/Influence__c/fields/ROM__c.field-meta.xml
<CustomField>
    <fullName>ROM__c</fullName>
    <label>ROM</label>
    <type>Text</type>
    <length>255</length>
</CustomField>