force-app/main/default/objects/Influence__c/fields/SIK__c.field-meta.xml
<CustomField>
    <fullName>SIK__c</fullName>
    <label>SIK</label>
    <type>Text</type>
    <length>255</length>
</CustomField>