force-app/main/default/objects/Influence__c/fields/SIN__c.field-meta.xml
<CustomField>
    <fullName>SIN__c</fullName>
    <label>SIN</label>
    <type>Text</type>
    <length>255</length>
</CustomField>