force-app/main/default/objects/Influence__c/fields/SOK__c.field-meta.xml
<CustomField>
    <fullName>SOK__c</fullName>
    <label>SOK</label>
    <type>Text</type>
    <length>255</length>
</CustomField>