force-app/main/default/objects/Influence__c/fields/SWE__c.field-meta.xml
<CustomField>
    <fullName>SWE__c</fullName>
    <label>SWE</label>
    <type>Text</type>
    <length>255</length>
</CustomField>