force-app/main/default/objects/Influence__c/fields/SWI__c.field-meta.xml
<CustomField>
    <fullName>SWI__c</fullName>
    <label>SWI</label>
    <type>Text</type>
    <length>255</length>
</CustomField>