force-app/main/default/objects/Influence__c/fields/TUN__c.field-meta.xml
<CustomField>
    <fullName>TUN__c</fullName>
    <label>TUN</label>
    <type>Text</type>
    <length>255</length>
</CustomField>