force-app/main/default/objects/Influence__c/fields/UCA__c.field-meta.xml
<CustomField>
    <fullName>UCA__c</fullName>
    <label>UCA</label>
    <type>Text</type>
    <length>255</length>
</CustomField>