force-app/main/default/objects/Influence__c/fields/WAL__c.field-meta.xml
<CustomField>
    <fullName>WAL__c</fullName>
    <label>WAL</label>
    <type>Text</type>
    <length>255</length>
</CustomField>