force-app/main/default/objects/Influence__c/fields/WUR__c.field-meta.xml
<CustomField>
    <fullName>WUR__c</fullName>
    <label>WUR</label>
    <type>Text</type>
    <length>255</length>
</CustomField>