force-app/main/default/objects/Influence__c/fields/XBI__c.field-meta.xml
<CustomField>
    <fullName>XBI__c</fullName>
    <label>XBI</label>
    <type>Text</type>
    <length>255</length>
</CustomField>