force-app/main/default/objects/Influence__c/fields/XIN__c.field-meta.xml
<CustomField>
    <fullName>XIN__c</fullName>
    <label>XIN</label>
    <type>Text</type>
    <length>255</length>
</CustomField>